Rewrite EndNoteXMLParser for 2009 publication data.
SVN-Revision: 17312